Update company name and contact email in index.html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 <body>
   <div>
-    <h1>BluIso</h1>
+    <h1>JRX Group</h1>
     <p>Holding Company. Coming Soon</p>
-    <p>Contact: <a href="mailto:contact@jrxgroup.com" style="color:#fff;">contact@bluisogames.com</a></p>
+    <p>Contact: <a href="mailto:contact@jrxgroup.co" style="color:#fff;">contact@jrxgroup.co</a></p>
   </div>
 </body>
 </html>
